# marisa-trie

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  COPYING.md  MODULE.bazel  Makefile.am  README.md  configure.ac
.github/workflows/: bazel.yml  clang-format.yml  linux-asan-tests.yml  linux.yml  macos.yml  windows.yml
bindings/: Makefile  marisa-swig-python3.cxx  marisa-swig-python3.h  marisa-swig.h
bindings/.svn/: all-wcprops  entries
bindings/perl/: marisa-swig.cxx  marisa-swig.h  marisa-swig_wrap.cxx  marisa.pm
bindings/perl/.svn/: all-wcprops  dir-prop-base  entries
bindings/python/: marisa-swig.cxx  marisa-swig.h  marisa-swig_wrap.cxx  marisa.py
bindings/python/.svn/: all-wcprops  dir-prop-base  entries
bindings/python3/: marisa-swig-python3.cxx  marisa-swig-python3.h  marisa-swig-python3_wrap.cxx  marisa.py
bindings/ruby/: marisa-swig.cxx  marisa-swig.h  marisa-swig_wrap.cxx
bindings/ruby/.svn/: all-wcprops  dir-prop-base  entries
docs/: readme.en.html  readme.ja.html
docs/.svn/: all-wcprops  entries
include/: BUILD.bazel
include/marisa/: Makefile.am  agent.h  base.h  exception.h  key.h  keyset.h  query.h  scoped-array.h  scoped-ptr.h  trie.h
lib/: Makefile.am
lib/.svn/: all-wcprops  dir-prop-base  entries
lib/marisa/: BUILD.bazel  Makefile.am  agent.cc  exception.cc  keyset.cc  trie.cc
lib/marisa/.svn/: all-wcprops  entries
lib/marisa/grimoire/: BUILD.bazel  Makefile.am  algorithm.h  intrin.h  trie.h  vector.h
lib/marisa/grimoire/.svn/: all-wcprops  entries
lib/marisa/grimoire/algorithm/: Makefile.am  sort.h
lib/marisa/grimoire/algorithm/.svn/: all-wcprops  entries
lib/marisa/grimoire/io/: Makefile.am  mapper.cc  mapper.h  reader.cc  reader.h  writer.cc  writer.h
lib/marisa/grimoire/io/.svn/: all-wcprops  entries
lib/marisa/grimoire/trie/: Makefile.am  cache.h  config.h  entry.h  header.h  history.h  key.h  louds-trie.cc  louds-trie.h  range.h  state.h  tail.cc  tail.h
lib/marisa/grimoire/trie/.svn/: all-wcprops  entries
lib/marisa/grimoire/trie/.svn/text-base/: louds-trie.cc.svn-base  range.h.svn-base
lib/marisa/grimoire/vector/: Makefile.am  bit-vector.cc  bit-vector.h  flat-vector.h  pop-count.h  rank-index.h  rethrowing-std-vector.h  vector.h
lib/marisa/grimoire/vector/.svn/: all-wcprops  entries
m4/.svn/: all-wcprops  dir-prop-base  entries
tests/: BUILD.bazel  Makefile.am  base-test.cc  io-test.cc  marisa-assert.h  marisa-test.cc  trie-test.cc  vector-test.cc
tests/.svn/: all-wcprops  dir-prop-base  entries
tools/: Makefile.am  cmdopt.cc  cmdopt.h  decimal_a_binario.cpp  marisa-benchmark.cc  marisa-build.cc  marisa-common-prefix-search.cc  marisa-dump.cc  marisa-lookup.cc  marisa-predictive-search.cc  marisa-reverse-lookup.cc
tools/.svn/: all-wcprops  dir-prop-base  entries
tools/.svn/text-base/: marisa-predictive-search.cc.svn-base
vs2008/.svn/: all-wcprops  entries
vs2008/base-test/: base-test.vcproj
vs2008/base-test/.svn/: all-wcprops  entries
vs2008/io-test/: io-test.vcproj
vs2008/io-test/.svn/: all-wcprops  entries
vs2008/libmarisa/: libmarisa.vcproj
vs2008/libmarisa/.svn/: all-wcprops  entries
vs2008/marisa-benchmark/: marisa-benchmark.vcproj
vs2008/marisa-benchmark/.svn/: all-wcprops  entries
vs2008/marisa-build/: marisa-build.vcproj
vs2008/marisa-build/.svn/: all-wcprops  entries
vs2008/marisa-common-prefix-search/: marisa-common-prefix-search.vcproj
vs2008/marisa-common-prefix-search/.svn/: all-wcprops  entries
vs2008/marisa-dump/: marisa-dump.vcproj
vs2008/marisa-dump/.svn/: all-wcprops  entries
vs2008/marisa-lookup/: marisa-lookup.vcproj
vs2008/marisa-lookup/.svn/: all-wcprops  entries
vs2008/marisa-predictive-search/: marisa-predictive-search.vcproj
vs2008/marisa-predictive-search/.svn/: all-wcprops  entries
vs2008/marisa-reverse-lookup/: marisa-reverse-lookup.vcproj
vs2008/marisa-reverse-lookup/.svn/: all-wcprops  entries
vs2008/marisa-test/: marisa-test.vcproj
vs2008/marisa-test/.svn/: all-wcprops  entries
vs2008/trie-test/: trie-test.vcproj
vs2008/trie-test/.svn/: all-wcprops  entries
vs2008/vector-test/: vector-test.vcproj
vs2008/vector-test/.svn/: all-wcprops  entries
vs2019/: vs2019.sln
vs2019/base-test/: base-test.vcxproj  base-test.vcxproj.filters
vs2019/io-test/: io-test.vcxproj  io-test.vcxproj.filters
vs2019/libmarisa/: libmarisa.vcxproj  libmarisa.vcxproj.filters
vs2019/marisa-benchmark/: marisa-benchmark.vcxproj  marisa-benchmark.vcxproj.filters
vs2019/marisa-build/: marisa-build.vcxproj  marisa-build.vcxproj.filters
vs2019/marisa-common-prefix-search/: marisa-common-prefix-search.vcxproj  marisa-common-prefix-search.vcxproj.filters
vs2019/marisa-dump/: marisa-dump.vcxproj  marisa-dump.vcxproj.filters
vs2019/marisa-lookup/: marisa-lookup.vcxproj  marisa-lookup.vcxproj.filters
vs2019/marisa-predictive-search/: marisa-predictive-search.vcxproj  marisa-predictive-search.vcxproj.filters
vs2019/marisa-reverse-lookup/: marisa-reverse-lookup.vcxproj  marisa-reverse-lookup.vcxproj.filters
vs2019/marisa-test/: marisa-test.vcxproj  marisa-test.vcxproj.filters
vs2019/trie-test/: trie-test.vcxproj  trie-test.vcxproj.filters
vs2019/vector-test/: vector-test.vcxproj  vector-test.vcxproj.filters
