load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//:__pkg__"])

# Core library implementation.
cc_library(
    name = "trie",
    srcs = [
        "agent.cc",
        "keyset.cc",
        "trie.cc",
    ],
    deps = [
        "//include:iostream",
        "//include:stdio",
        "//include:trie",
        "//lib/marisa/grimoire:trie",
    ],
)
